[package]
name = "pololu-usb"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "pololu-usb-rs"
]

[dependencies]
nusb = "0.1.9"
plotters = "0.3.6"
pololu-usb-rs = { path = "pololu-usb-rs" }
libm = "0.2.8"
ndarray = {version = "0.15.6", features = ["serde"]}
serde = { version = "1.0.204", features = ["derive"] }
serde_yml = "0.0.10"
serde_json = "1.0.120"
